bk_ida/gccida/g2/preprocess_constraints
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/preprocess_constraints/src/recog.c:2654:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/preprocess_constraints/src/recog.c:2662:20: error: use of undeclared identifier 'recog_data_0'
for ( i = ( char *)recog_data_0.constraints[v1]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/preprocess_constraints/src/recog.c:2663:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives > v2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/preprocess_constraints/src/recog.c:2864:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( recog_data_0.n_operands > ( int)v1 ); 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/preprocess_constraints/src/obj/recog.o] Error 1
